[package]
name = "rittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
anyhow = "1.0.66"
url = "2.3.1"
sha1 = "0.10.5"
bitvec = "1.0.1"
format-bytes = "0.3.0"
bendy = { version = "0.3.3", features = ["std", "serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_bytes = "0.11.7"
urlencoding = "2.1.2"

[dev-dependencies]
tempfile = "3.3.0"
hex-literal = "0.3.4"
