[package]
name = "rittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
anyhow = "1.0.66"
url = "2.3.1"
sha1 = "0.10.5"
bitvec = "1.0.1"
format-bytes = "0.3.0"
bendy = { version = "0.3.3", features = ["std", "serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_bytes = "0.11.7"
urlencoding = "2.1.2"
regex = "1.7.0"
clap = { version = "4.0.29", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
tempfile = "3.3.0"
hex-literal = "0.3.4"
pipe = "0.4.0"
